--- a/RockPaperScissors-homework/app/src/main/res/layout/activity_game_result.xml
+++ b/RockPaperScissors-homework/app/src/main/res/layout/activity_game_result.xml
@@ -1,9 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.wesleyreisz.rockpaperscissors.GameResultActivity"
     android:id="@+id/resultLayout"
     >
@@ -20,7 +17,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnPlayer"
+        android:id="@+id/btnWinner"
         android:backgroundTint="@android:color/transparent"
         android:layout_above="@id/txtResult"
         android:layout_centerHorizontal="true"
@@ -29,10 +26,22 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnComputer"
+        android:id="@+id/btnLoser"
         android:backgroundTint="@android:color/transparent"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/txtResult"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtMessage"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:paddingLeft="5pt"
+        android:paddingRight="5pt"
         />
 
 </RelativeLayout>
