--- a/RockPaperScissors-homework/app/src/main/res/menu/menu_game_result.xml
+++ b/RockPaperScissors-homework/app/src/main/res/menu/menu_game_result.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.wesleyreisz.rockpaperscissors.GameResultActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_settings" android:title="@string/action_help"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
