Created Application Class example
An application class is used to share state in an android application.
This last commit shows a basic example of how to incorporate an Applicaiton
class into your Android application.

--- a/RockPaperScissors-homework/app/src/main/res/menu/menu_main.xml
+++ b/RockPaperScissors-homework/app/src/main/res/menu/menu_main.xml
@@ -9,4 +9,8 @@
         android:title="@string/action_help_dialog"
         android:orderInCategory="100"
         app:showAsAction="collapseActionView" />
+    <item android:id="@+id/action_stats"
+        android:title="@string/action_game_stats"
+        android:orderInCategory="100"
+        app:showAsAction="collapseActionView" />
 </menu>
