--- a/RockPaperScissors-homework/app/src/main/res/layout/activity_main.xml
+++ b/RockPaperScissors-homework/app/src/main/res/layout/activity_main.xml
@@ -5,34 +5,62 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <ImageButton
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnPaper"
-        android:backgroundTint="@android:color/transparent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/paper"
-        />
+        android:id="@+id/firstRow"
+        >
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnPaper"
+            android:backgroundTint="@android:color/transparent"
+            android:src="@drawable/paper"
+            />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnRock"
-        android:backgroundTint="@android:color/transparent"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/rock"
-        android:layout_above="@id/btnPaper"
-        />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnRock"
+            android:backgroundTint="@android:color/transparent"
+            android:src="@drawable/rock"
+            android:layout_above="@id/btnPaper"
+            />
+    </LinearLayout>
 
-    <ImageButton
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnScissors"
-        android:backgroundTint="@android:color/transparent"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/scissors"
-        android:layout_below="@id/btnPaper"
-        />
+        android:id="@+id/secondRow"
+        android:layout_below="@id/firstRow">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnScissors"
+            android:backgroundTint="@android:color/transparent"
+            android:src="@drawable/scissors"
+            />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnLizard"
+            android:backgroundTint="@android:color/transparent"
+            android:src="@drawable/lizard"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/thirdRow"
+        android:layout_below="@id/secondRow">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnSpock"
+            android:backgroundTint="@android:color/transparent"
+            android:src="@drawable/spock"
+            />
+    </LinearLayout>
 
 </RelativeLayout>
